--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
-    "gh-pages": "^6.1.1",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -33,7 +32,7 @@
     "clean": "rm -rf build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://prabinkc2046.github.io/prabinkc-portfolio-ts",
+  "homepage": "https://prabinkc2046.github.io/portfolio",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "gh-pages": "^6.1.1"
   }
 }
