--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/styled-components": "^5.1.34",
     "gh-pages": "^6.1.1"
   }
