Added AI powered chat bot

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_EMAIL_API_URL=https://nepal-flood-support-email-backend.onrender.com
+REACT_APP_CHAT_SERVER_API=https://ai-powered-personal-assistance-for.onrender.com/chat
